k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: re-build-app
  namespace: default

spec:
  replicas: 2

  selector:
    matchLabels:
      app: re-build-app

  template:
    metadata:
      labels:
        app: re-build-app

    spec:
      serviceAccountName: re-build-app-sa 

      containers:
        - name: re-build-app
          image: 800770414493.dkr.ecr.us-east-1.amazonaws.com/eks-cluster-repo:1.1

          ports:
            - name: http
              containerPort: 5000

          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
