k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: re-build-app
  namespace: default

spec:
  type: ClusterIP

  selector:
    app: re-build-app

  ports:
    - name: http
      port: 5000
      targetPort: http
      protocol: TCP
